Responsive page heights for directions and assessment (prevents whitespace at page bottom for short pages

--- a/src/app/pre-test_pages/directions-page/directions-page.component.css
+++ b/src/app/pre-test_pages/directions-page/directions-page.component.css
@@ -9,7 +9,7 @@ h1 {
 	line-height: 35px;
 	text-align: center;
 	letter-spacing: 0.04em;
-	margin-top: 72px;
+	padding-top: 72px;
 	margin-bottom: 22px;
 }
 
